# resources/js/vue/helpers/const.js
@@ -1,0 +1,16 @@
+export default {
+    URL: {
+        ITEM_INDEX:'/api/items/index',
+        ITEM_CREATE:'/api/items/create',
+        ITEM_GET:'/api/items/get/',
+        ITEM_DESTROY:'/api/items/destroy/',
+
+
+        ITEM_CATEGORIES_INDEX: '/api/items/categories/index',
+        ITEM_CATEGORIES_SEARCH: '/api/items/categories/search',
+        ITEM_CATEGORIES_CREATE: '/api/items/categories/create',
+        ITEM_CATEGORIES_GET: '/api/items/categories/get/',
+        ITEM_CATEGORIES_DESTROY: '/api/items/categories/destroy/',
+    }
+};
+
